change autoPlay flashvar to true

--- a/modules/KalturaSupport/tests/AutoPlay.qunit.html
+++ b/modules/KalturaSupport/tests/AutoPlay.qunit.html
@@ -55,7 +55,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436447/wid/_243342/u
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&autoPlay=false" />
+	<param name="flashVars" value="&autoPlay=true" />
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436447/wid/_243342/uiconf_id/7534811/entry_id/0_uka1msg4" />
 </object>
 
