--- a/modules/KalturaSupport/tests/ReferenceId.html
+++ b/modules/KalturaSupport/tests/ReferenceId.html
@@ -5,9 +5,6 @@
 
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script>
-mw.setConfig('Kaltura.ServiceUrl', 'http://devtests.kaltura.co.cc' );
-mw.setConfig('Kaltura.CdnUrl', 'http://devtests.kaltura.co.cc' );
-mw.setConfig('Kaltura.StatsServiceUrl', 'http://devtests.kaltura.co.cc' );
 function changeMedia() {
 	document.getElementById('kdp').sendNotification('changeMedia', {referenceId: "the-avengers"});
 }
@@ -24,13 +21,13 @@ This test allow to load the player with reference Id (without entry Id) and to u
 </ul><br />
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
 <br /><br />
-<object id="kdp" name="kdp" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://devtests.kaltura.co.cc/index.php/kwidget/cache_st/1326019150/wid/_495794/uiconf_id/3552919" data="http://devtests.kaltura.co.cc/index.php/kwidget/cache_st/1326019150/wid/_495794/uiconf_id/3552919">
+<object id="kdp" name="kdp" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1332424156/wid/_423851/uiconf_id/7502092/entry_id/1_71dhcu80">
 	<param name="allowFullScreen" value="true" />
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&referenceId=the-dark-knight-rises" />
-	<param name="movie" value="http://devtests.kaltura.co.cc/index.php/kwidget/cache_st/1326019150/wid/_495794/uiconf_id/3552919" />
+	<param name="flashVars" value="&" />
+	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1332424156/wid/_423851/uiconf_id/7502092/entry_id/1_71dhcu80" />
 </object>
 <br />
 <a href="#" onclick="changeMedia();">Change Entry</a>
