added support for mediaType as 'vid' or 'aud' prefix to ASSETNAME

--- a/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
@@ -52,7 +52,7 @@ width="0%" height="0%" includeInLayout="false"
       path="/content/uiconf/disney/kdp_3.5.44/plugins/dolStatisticsPlugin.swf"
 playheadFrequency="10" 
 jsFunctionName="cto.trackVideo"
-ASSETNAME="{mediaProxy.entry.id}|{playBtnControllerScreen.selected}|{mediaProxy.entry.name}" 
+ASSETNAME="|{mediaProxy.entry.id}|{playBtnControllerScreen.selected}|{mediaProxy.entry.name}" 
 GENURL="{configProxy.flashvars.referer}"  
 GENTITLE="Kaltura Oleg Test"  
 DEVID="1"
