--- a/modules/KalturaSupport/tests/Carousel.html
+++ b/modules/KalturaSupport/tests/Carousel.html
@@ -32,7 +32,7 @@
 			<param name="allowNetworking" value="all" />
 			<param name="allowScriptAccess" value="always" />
 			<param name="bgcolor" value="#000000" />
-			<param name="flashVars" value="fixedThumbnails=true&numOfThumbnails=2&playlistAPI.autoInsert=true&playlistAPI.kpl0Name=testList&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D861182%26subp_id%3D86118200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D1_35tqydrp" />
+			<param name="flashVars" value="playlistAPI.autoInsert=true&playlistAPI.kpl0Name=testList&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D861182%26subp_id%3D86118200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D1_35tqydrp" />
 			<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1329299975/wid/_861182/uiconf_id/7256681/entry_id/1_8ions2uv" />
 		</object>
 	</div>
