--- a/modules/KalturaSupport/tests/HoveringControl.html
+++ b/modules/KalturaSupport/tests/HoveringControl.html
@@ -212,7 +212,7 @@
 				    <Label 
 				      id="offlineMessage" styleName="offlineMessage"
 				      text="{mediaProxy.entry.offlineMessage}" visible="{mediaProxy.isOffline}"
-				      width="100%" height="30"/> <!-- mediaProxy.entry.offlineMessage-->
+				      width="100%" height="30"/> 
 			     	<Spacer height="100%" />
 		    	</VBox>
         <Screens id="screensLayer" width="100%" height="100%" mouseOverTarget="{PlayerHolder}" styleName="clickThrough" startScreenId="startScreen" startScreenOverId="startScreen" pauseScreenOverId="pauseScreen" pauseScreenId="pauseScreen" playScreenOverId="playScreen" endScreenId="endScreen" endScreenOverId="endScreen"/>
