Fixed deep linking JS to work both in KDP and HTML5

--- a/modules/KalturaSupport/tests/DeepLinkMultiPlaylist.html
+++ b/modules/KalturaSupport/tests/DeepLinkMultiPlaylist.html
@@ -114,7 +114,7 @@
 
 <body scroll="no">
 
-<object id="kaltura_player" name="kaltura_player_1333531249" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333531249/wid/_1401/uiconf_id/4630731" data="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333531249/wid/_1401/uiconf_id/4630731"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333531249/wid/_1401/uiconf_id/4630731" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a>  </object>
+<!--<object id="kaltura_player" name="kaltura_player_1333531249" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333531249/wid/_1401/uiconf_id/4630731" data="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333531249/wid/_1401/uiconf_id/4630731"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333531249/wid/_1401/uiconf_id/4630731" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a>  </object>-->
 
 
 <!-- <object id="kaltura_player" 
@@ -133,6 +133,11 @@
 	<param name="flashVars" value="playlistAPI.autoInsert=false&playlistAPI.playlistAutoInsert=false&playlistAPI.autoPlay=true"/>
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1286887860/wid/_321011/uiconf_id/2492121" />
 </object> -->
+
+<object id="kaltura_player" name="kaltura_player_1333551397" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333551397/wid/_1401/uiconf_id/4630731" data="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333551397/wid/_1401/uiconf_id/4630731"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://prod.kaltura.co.cc/index.php/kwidget/cache_st/1333551397/wid/_1401/uiconf_id/4630731" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a>  </object>
+
+
+
 		
 </body>
 </html>
