updated test file to use {dolStatistics.mediaTypeName}

--- a/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
@@ -25,7 +25,7 @@
   			targetId: 'kaltura_player_1328708786',
   			wid : '_243342',
   			uiconf_id : '7190901',
-  			cache_st : 1,
+  			cache_st : '2',
   			flashvars: {
   				'autoPlay' : true,
   				'playlistAPI.autoInsert' : 'true',
@@ -52,7 +52,7 @@ width="0%" height="0%" includeInLayout="false"
       path="/content/uiconf/disney/kdp_3.5.44/plugins/dolStatisticsPlugin.swf"
 playheadFrequency="10" 
 jsFunctionName="cto.trackVideo"
-ASSETNAME="|{mediaProxy.entry.id}|{playBtnControllerScreen.selected}|{mediaProxy.entry.name}" 
+ASSETNAME="{dolStatistics.mediaTypeName}|{mediaProxy.entry.id}|{playBtnControllerScreen.selected}|{mediaProxy.entry.name}" 
 GENURL="{configProxy.flashvars.referer}"  
 GENTITLE="Kaltura Oleg Test"  
 DEVID="1"
