cleaned up comments about KDP restore follow up to:
4b70b0207d8b4bd244dc775c2c67aa6dd6cb5c23

--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -34,6 +34,14 @@ function jsKalturaPlayerTest( videoId ){
 	});
 }
 </script>
+<script>
+	function jsCallbackReady(videoId){
+		if( console && console.log ){
+			console.log( 'jsCallbackReady: ' + videoId );
+		}
+	}
+</script>
+
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
