--- a/modules/KalturaSupport/tests/iPadNativeControls.html
+++ b/modules/KalturaSupport/tests/iPadNativeControls.html
@@ -7,6 +7,8 @@
 
 <script type="text/javascript">
 	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', false);
+	// dissable adaptive for testing
+	mw.setConfig("Kaltura.UseAppleAdaptive", false );
 </script>
 </head>
 <body>
