updated feature test file text

--- a/modules/KalturaSupport/tests/FullscreenLinkOneClickHTMLPlayback.html
+++ b/modules/KalturaSupport/tests/FullscreenLinkOneClickHTMLPlayback.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> Native Fullscreen Link Playback test </title>
+<title> Pseudo Fullscreen Link Playback test </title>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 </head>
 <body>
-<h2> Native Fullscreen Link Playback test </h2>
+<h2> Pseudo Fullscreen Link Playback test </h2>
 <span id="loading"> loading<blink>...</blink></span><br />
 <div class="fullscreenLinks" style="display:none">
 	<span data-entryid="0_uka1msg4"> Play folger coffee </span> <br />
