comment clean up

--- a/modules/KalturaSupport/tests/FullscreenLinkOneClickHTMLPlayback.html
+++ b/modules/KalturaSupport/tests/FullscreenLinkOneClickHTMLPlayback.html
@@ -64,7 +64,7 @@
 			});
 			var firstRunChangeMediaDone = false; 
 			window['onPlayerPlayEnd'] = function(){
-				// reture fullscreen: 
+				// toggle fullscreen to restore window player: 
 				$iframe.find('#' + playerId).get(0).fullscreen();
 			}
 			window['onCloseFullScreen'] = function(){
