Changed GoogleAnalytics plugin to be a top level module

--- a/modules/GoogleAnalytics/tests/GoogleAnalytics.html
+++ b/modules/GoogleAnalytics/tests/GoogleAnalytics.html
@@ -19,8 +19,8 @@
 				)
 			};
 		</script>
-		<!--  qUnit TESTING -->
-		<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+		<!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
+		<script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
 		<script type="text/javascript">
 			var testEventObject = {};
 
