--- a/modules/KalturaSupport/tests/EmptyPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/EmptyPlayer.qunit.html
@@ -18,7 +18,6 @@ function jsKalturaPlayerTest( videoId ){
 	test( "Iframe in DOM", function() {
 		ok( $('#' + videoId + '_ifp').length , 'iframe found' );
 		equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
-		start();
 	});
 	// listen for the empty kdp event: 
 	
@@ -26,19 +25,21 @@ function jsKalturaPlayerTest( videoId ){
 		window.kdpEmptyFunction = function(){
 			ok( true, 'Empty event fired' );
 			ok( typeof kdp.sendNotification != 'undefined', "Player Api present" ); 
+			start();
 			// Add a listner for entry ready: 
-			kdp.addJsListener( 'entryReady', kdpEntryReady );
+			kdp.addJsListener( 'entryReady', 'kdpEntryReady' );
 			// Change player entry: 
 			kdp.sendNotification( "changeMedia", { 'entryId' : '0_uka1msg4' } ); 
-
-			window.kdpEntryReady = function(){
-				ok( true, 'Changed entry event fired');
-				var entry = kdp.evaluate('{mediaProxy.entry}');
-				equal( '0_uka1msg4', entry.id, "Entry ids match");
-				start();
-			}
 		};
 	});
+	asyncTest("Change entry called on empty player", function(){
+		window.kdpEntryReady = function(){
+			ok( true, 'Changed entry event fired');
+			var entry = kdp.evaluate('{mediaProxy.entry}');
+			equal( '0_uka1msg4', entry.id, "Entry ids match");
+			start();
+		}
+	})
 }
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
