major refactor of kWidget
* Eliminated all our jsCallback code and rewrote it to never restore
jsCallback. We proxy it as soon as possible and always call our proxy
from both HTML5 and flash this should eliminate issues around restore
timings and recursive calls.

* Moved scattered environmental checks to centralized
kWidget.checkEnviornment() method. 

* Re-factored out all our globals, generalized our deprecation methods,
and moved most things to kWidget.

* Fixed a long standing performance issue where we had different uris
for jQuery / mwEmbed on client side vs page side. Now they optimize
around repeatable cachable uris.

* This reduces mwEmbedLoader to only a few mw utilities and  startup
calls. ... this is closer to what it will do as a "startup" file in the
1.7 new resource loader.

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -8,14 +8,14 @@
 window.kWidgetCallbackWithID = false;
 function jsKalturaPlayerTest( videoId ){
 	
-	// Name this module
+	// Name this module 
 	module( "kWidget Player" );
 
 	asyncTest("Inline readyCallback fired", function(){
 		kalturaQunitWaitForPlayer(function(){
 			equal( window.kWidgetCallbackWithID, videoId, " ReadyCallback fired with id:" + videoId );
 			testAutoPlay();
-			// done with async
+			// Done with async 
 			start();
 		});
 	});
