don't call embedPlayerHTML to update poster,
- whites space fixes
- always call update poster in changeMedia sequence

--- a/modules/DoubleClick/tests/iPhoneCompatibleDoubleClickPreroll.html
+++ b/modules/DoubleClick/tests/iPhoneCompatibleDoubleClickPreroll.html
@@ -54,7 +54,7 @@ $(function(){
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
-		<param name="flashVars" value="&adTagUrl.adTagUrl=http://pubads.g.doubleclick.net/gampad/ads?sz=400x300&amp;iu=%2F6753%2FHTML5SDK%2Fvideo_hosted_image&amp;ciu_szs=300x250%2C728x90&amp;impl=s&amp;gdfp_req=1&amp;env=vp&amp;output=xml_vast2&amp;unviewed_position_start=1&amp;url=[referrer_url]&amp;correlator=[timestamp]" />
+		<param name="flashVars" value="&" />
 		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1231231246/wid/_243342/uiconf_id/7340952/entry_id/0_uka1msg4" />
 </object>
 
