updated test file for auto continue

--- a/modules/DoubleClick/tests/iPhoneCompatibleDoubleClickPreroll.html
+++ b/modules/DoubleClick/tests/iPhoneCompatibleDoubleClickPreroll.html
@@ -54,7 +54,7 @@ $(function(){
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
-		<param name="flashVars" value="&" />
+		<param name="flashVars" value="&playlistAPI.autoContinue=true" />
 		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1231231246/wid/_243342/uiconf_id/7340952/entry_id/0_uka1msg4" />
 </object>
 
