Changed entry to include WebM flavor

--- a/modules/KalturaSupport/tests/Loop.qunit.html
+++ b/modules/KalturaSupport/tests/Loop.qunit.html
@@ -45,18 +45,18 @@
 	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 	<br />
 	<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" 
-			allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400"
-			xmlns:dc="http://purl.org/dc/terms/" 
+			allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" 
+			bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" 
 			xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
 			rel="media:video" 
-			resource="http://www.kaltura.com/index.php/kwidget/cache_st/1334841684/wid/_667802/uiconf_id/7502092/entry_id/1_as63qzvc" 
-			data="http://www.kaltura.com/index.php/kwidget/cache_st/1334841684/wid/_667802/uiconf_id/7502092/entry_id/1_as63qzvc">
+			resource="http://www.kaltura.com/index.php/kwidget/cache_st/1335711760/wid/_861182/uiconf_id/7752572/entry_id/1_fy732m59" 
+			data="http://www.kaltura.com/index.php/kwidget/cache_st/1335711760/wid/_861182/uiconf_id/7752572/entry_id/1_fy732m59">
 		<param name="allowFullScreen" value="true" />
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
 		<param name="flashVars" value="&loop=true&autoPlay=true" />
-		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1334841684/wid/_667802/uiconf_id/7502092/entry_id/1_as63qzvc" />
+		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1335711760/wid/_861182/uiconf_id/7752572/entry_id/1_fy732m59" />	
 	</object>
 </body>
 </html>
