also check for doPause, fixed playInterface update, don't autoplay

--- a/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
@@ -134,7 +134,7 @@
   			uiconf_id : '7190901',
   			cache_st : '2',
   			flashvars: {
-  				'autoPlay' : true,
+  				'autoPlay' : false,
   				'playlistAPI.autoInsert' : 'true',
   				'playlistAPI.autoContinue' : 'true',
   				'playlistAPI.kpl0Name' : 'test 4 item playlist',
